# Atomica

./: .gitignore  README.md  atomica_lib.d.ts  atomica_lib.js  atomica_lib_bg.wasm  atomica_lib_bg.wasm.d.ts  build.gradle.kts  full_repo_last_commit.txt  index.html  index.js  log.txt  package-lock.json  package.json  settings.gradle.kts  src.d.ts  src.js  src_bg.wasm  src_bg.wasm.d.ts
.github/workflows/: build.sh  deploy.yml  git-log-files.sh  log.sh  quick-build.sh  run.sh  setup.sh
gradle/wrapper/: gradle-wrapper.properties
lib/: Cargo.toml
lib/src/: commands.rs  dft_simulator.rs  lib.rs  main copy.bak  main.rs  renderer.rs  renderer.rs.bak  simulation.rs
lib/src/events/: listeners.rs  mod.rs  resize_handler.rs
misc/: Cargo.toml  dft_simulator.py  electron_density.mp4.bak  marching.py
misc/src/: main.rs
src/: index.html  index.js
src/main/java/net/atomica/: Main.java
src/main/java/net/atomica/engine/display/: DisplayManager.java
src/main/java/net/atomica/engine/entities/: Camera.java  Entity.java  Light.java  Player.java
src/main/java/net/atomica/engine/logic/: Event.java  EventHandler.java  EventManager.java  EventType.java  KeyPressEvent.java
src/main/java/net/atomica/engine/logic/events/: FullscreenToggleListener.java  WASDListener.java
src/main/java/net/atomica/engine/models/: RawModel.java  RawModels.java  Sphere.java  TexturedModel.java
src/main/java/net/atomica/engine/render/: Camera.java  Mesh.java  Model.java  RenderEngine.java  Texture.java
src/main/java/net/atomica/engine/renderEngine/: DisplayManager.java  GeometryLoader.java  Loader.java  MasterRenderer.java  RenderObject.java  Renderer.java  TextureLoader.java
src/main/java/net/atomica/engine/resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/main/java/net/atomica/engine/shaders/: Shader.java  ShaderManager.java  ShaderProgram.java  StaticShader.java
src/main/java/net/atomica/engine/textures/: ModelTexture.java
src/main/java/net/atomica/engine/toolbox/: Maths.java
src/main/java/net/atomica/logging/: Logger.java
src/main/resources/net/atomica/engine/shaders/: fragment_shader.glsl  vertex_shader.glsl
