[package]
name = "atomica_lib"
version = "0.1.0"
edition = "2021"
repository="https://github.com/BobDaGithubAccount/Atomica"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window"] }
three-d = "0.17.0"
log = "0.4"
winit = "0.28"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1"