[package]
name = "rustplayground"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "HtmlElement", "Document"] }
three-d = "0.17.0"
log = "0.4"
winit = "0.28"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1"
console_log = "1"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
# Remove: ndarray-linalg = "0.14" NOTE: IT DOESN'T WORK!
nalgebra = "0.31"
itertools = "0.10"
getrandom = { version = "0.2", features = ["js"] }
marching-cubes = "0.1.2"